--- a/src/styles/parallaxStyle.scss
+++ b/src/styles/parallaxStyle.scss
@@ -8,10 +8,8 @@
 
 .content {
   position: relative;
+  height: 90.3vh;
   width: 100%;
-  height: 90.5vh;
-  display: flex;
-  justify-content: center;
   padding-top: 5rem;
   text-align: center;
 
@@ -19,7 +17,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     .personal {
       text-transform: uppercase;
       color: $Lime;
@@ -94,7 +91,7 @@
     position: absolute;
     z-index: 1;
     right: 0;
-    top: 40%;
+    top: 45%;
     width: 700px;
     height: 400px;
   }
